[package]
name = "my-project"
version = "0.1.0"
authors = ["mantou132 <709922234@@qq.com>"]
license = "MIT"
edition = "2018"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "my_project"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.3.3"

[dependencies]
neon = "0.3.3"
enigo = { git = "https://github.com/mantou132/enigo" }
